load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "context.cpp",
        "context.h",
        "encode.go",
        "env.go",
        "executor.go",
    ],
    cgo = True,
    clinkopts = [],  # keep
    importpath = "github.com/google/gapid/gapis/api/executor",
    visibility = ["//visibility:public"],
    cdeps = [
        "//core/memory/arena/cc",
        "//gapil/compiler/cc",
    ],
    deps = [
	    "//core/codegen:go_default_library",
	    "//gapil/compiler:go_default_library",
        "//core/log:go_default_library",
        "//core/memory/arena:go_default_library",
        "//gapil:go_default_library",
        "//gapis/api:go_default_library",
        "//gapis/capture:go_default_library",
        "//gapis/database:go_default_library",
        "//gapis/memory:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    size = "small",
    srcs = ["executor_test.go"],
    importpath = "github.com/google/gapid/gapil/executor_test",
    deps = [
        "//core/assert:go_default_library",
        "//core/data/binary:go_default_library",
        "//core/data/endian:go_default_library",
        "//core/data/id:go_default_library",
        "//core/log:go_default_library",
        "//core/os/device:go_default_library",
        "//core/math/interval:go_default_library",
        "//core/text/parse:go_default_library",
        "//gapil:go_default_library",
        "//gapil/compiler:go_default_library",
        "//gapis/api:go_default_library",
        "//gapis/api/executor/testexterns:go_default_library",
        "//gapis/capture:go_default_library",
        "//gapis/database:go_default_library",
        "//gapis/memory:go_default_library",
        "//gapis/replay/builder:go_default_library",
        ":go_default_library",
    ],
)
